# DocxTranslator

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  release.sh  streamlit_app.py
.github/workflows/: docker-publish.yml  pypi-publish.yml
docs/: README_de.md  README_fr.md  README_kr.md  README_pt.md  README_zh-cn.md  README_zh-tw.md
docx_translator/: __init__.py  __main__.py  cli.py  streamlit_app.py  translator.py
